partial_eq_dyn_derive/tests/ui/compile_errors/item-contains-non-dyn-partial-eq-trait-object.rs
use partial_eq_dyn::AsAny;
use partial_eq_dyn_derive::PartialEqDyn;

trait TestTrait: AsAny {}

#[derive(PartialEqDyn)]
struct TestStruct(Box<dyn TestTrait>);

fn main() {}
